[build-system]
requires = ["scikit-build-core", "numpy"]
build-backend = "scikit_build_core.build"
# requires = [
#     "setuptools>=42",
#     "scikit-build>=0.13",
#     "cmake>=3.18",
#     "ninja",
# ]
# build-backend = "setuptools.build_meta"

[project]
name = "pyYggdrasil"
version = "0.0.1"
description = "Python wrapper around yggdrasil C++ communicator classes"
license = { text="MIT License" }
keywords = [
  "yggdrasil"
]
authors = [
  { name="Doug Friedel" },
  { name="Meagan Lang", email="langmm.astro@gmail.com" },
]
maintainers = [
  { name="Meagan Lang", email="langmm.astro@gmail.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python",
]
dependencies = [
    "numpy"
]

[project.urls]
Repository = "https://github.com/astro-friedel/yggcpp"


[tool.scikit-build]
wheel.packages = ['communication/pyYggdrasil']