[build-system]
requires = [
  "scikit-build-core",
  "setuptools_scm",
  "hatch-fancy-pypi-readme",
  "numpy>=1.13.0",
]
build-backend = "scikit_build_core.build"

[project]
name = "YggInterface"
# dynamic = ["version"]
version = "0.0.1"
description = "Python wrapper around yggdrasil C++ communicator classes"
license = { text="MIT License" }
keywords = [
  "yggdrasil"
]
authors = [
  { name="Doug Friedel" },
  { name="Meagan Lang", email="langmm.astro@gmail.com" },
]
maintainers = [
  { name="Meagan Lang", email="langmm.astro@gmail.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python",
]
dependencies = [
    "numpy"
]
requires-python = ">=3.9"

[project.urls]
Repository = "https://github.com/astro-friedel/yggcpp"

[tool.scikit-build]
wheel.packages = ['python/YggInterface']
wheel.install-dir = "YggInterface"
# metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
build.verbose = true
editable.verbose = true

# [tool.setuptools_scm]
# write_to = "_version.py"
# git_describe_command = "git describe --tags --abbrev=0"
